--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,10 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+node_modules/
+bower_components/
+app/jspm_packages
+tmp
+.DS_Store
+.idea
+!.gitkeep
